--- a/book.toml
+++ b/book.toml
@@ -14,3 +14,7 @@ edit-url-template = "https://github.com/rust-lang-cn/book-cn/edit/master/{path}"
 [output.html.redirect]
 "ch01-00-introduction.html" = "ch00-00-introduction.html"
 "ch05-01-method-syntax.html" = "ch05-03-method-syntax.html"
+
+[output.pdf]
+
+[output.pdf-outline]
